--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
        - ./postgres:/data/postgres
     ports:
-       - "127.0.0.1:5432:${DB_PORT}"
+       - "127.0.0.1:${DB_PORT}:5432"
     networks:
       - postgres
     restart: unless-stopped
